@@ -8,12 +8,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
+import java.util.List;
 
 @Component
 public class TenantFilter extends OncePerRequestFilter {
@@ -33,22 +35,17 @@ public class TenantFilter extends OncePerRequestFilter {
 
         String path = request.getRequestURI();
 
-        // 2. BYPASS DE RUTAS PÚBLICAS Y EXTERNAS (n8n / Bot)
+        // 2. BYPASS DE RUTAS PÚBLICAS Y EXTERNAS
         if (path.startsWith("/api/auth") || path.startsWith("/api/webhook") || path.startsWith("/api/external")) {
-
-            // Si es una ruta externa, intentamos setear el Tenant desde el Header directo
             if (path.startsWith("/api/external")) {
                 String tenantIdHeader = request.getHeader("X-Tenant-ID");
                 if (tenantIdHeader != null && !tenantIdHeader.isEmpty()) {
                     TenantContext.setCurrentTenant(tenantIdHeader);
-
-                    // Creamos una autenticación ficticia de "Sistema" para que Spring Security no rebote
                     UsernamePasswordAuthenticationToken systemAuth = new UsernamePasswordAuthenticationToken(
                             "SYSTEM_BOT", null, Collections.emptyList()
                     );
                     SecurityContextHolder.getContext().setAuthentication(systemAuth);
                 } else {
-                    // Si es external pero no mandan el ID del local, rebotamos
                     response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
                     response.setContentType("application/json");
                     response.getWriter().write("{\"error\": \"X-Tenant-ID requerido para peticiones externas\"}");
@@ -66,7 +63,7 @@ public class TenantFilter extends OncePerRequestFilter {
 
         final String authHeader = request.getHeader("Authorization");
 
-        // 3. VALIDACIÓN DE PRESENCIA DE TOKEN (Solo para el resto de la App)
+        // 3. VALIDACIÓN DE PRESENCIA DE TOKEN
         if (authHeader == null || !authHeader.startsWith("Bearer ")) {
             response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
             response.setContentType("application/json");
@@ -80,11 +77,16 @@ public class TenantFilter extends OncePerRequestFilter {
             Claims claims = jwtService.extractAllClaims(jwt);
             String userEmail = claims.getSubject();
             String tenantId = claims.get("tenant_id", String.class);
+            String rol = claims.get("rol", String.class);
 
             if (userEmail != null && tenantId != null && SecurityContextHolder.getContext().getAuthentication() == null) {
                 TenantContext.setCurrentTenant(tenantId);
+
+                // ← FIX CRÍTICO: incluir el rol como authority para que Spring Security
+                // pueda evaluar hasRole("ADMIN") correctamente
+                String authority = "ROLE_" + (rol != null ? rol : "OPERADOR");
                 UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
-                        userEmail, null, Collections.emptyList()
+                        userEmail, null, List.of(new SimpleGrantedAuthority(authority))
                 );
                 SecurityContextHolder.getContext().setAuthentication(authToken);
             }
